--- a/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
+++ b/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
@@ -23,6 +23,7 @@
                                 <state key="normal" title="Open"/>
                                 <connections>
                                     <action selector="open:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Z9-Ic-ujU"/>
+                                    <segue destination="WdA-3v-K5S" kind="show" id="zOe-D6-BCD"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -33,6 +34,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1505" y="270"/>
+        </scene>
+        <!--Table Controller2-->
+        <scene sceneID="UL9-Yy-Bk0">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="WdA-3v-K5S" customClass="TableController2" customModule="SampleApp4" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ycQ-fZ-mva">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nHJ-pR-St6">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" textLabel="O44-zZ-Ni1" detailTextLabel="Gjr-sg-L9w" imageView="xZB-MG-CvB" style="IBUITableViewCellStyleSubtitle" id="9GD-4f-quU">
+                                        <rect key="frame" x="0.0" y="24.333333969116211" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9GD-4f-quU" id="qeC-fe-9TK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Typescript" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O44-zZ-Ni1">
+                                                    <rect key="frame" x="75.333333333333314" y="7.0000000000000009" width="60" height="14.333333333333334"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="hello, world" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gjr-sg-L9w">
+                                                    <rect key="frame" x="75.333333333333314" y="23.333333333333336" width="60.666666666666664" height="13.333333333333334"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="typescript" id="xZB-MG-CvB">
+                                                    <rect key="frame" x="16" y="0.0" width="44.333333333333314" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="MA2-4b-2q6"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nHJ-pR-St6" firstAttribute="leading" secondItem="MA2-4b-2q6" secondAttribute="leading" id="9Jz-by-byx"/>
+                            <constraint firstItem="MA2-4b-2q6" firstAttribute="trailing" secondItem="nHJ-pR-St6" secondAttribute="trailing" id="JpB-nU-v7r"/>
+                            <constraint firstItem="MA2-4b-2q6" firstAttribute="bottom" secondItem="nHJ-pR-St6" secondAttribute="bottom" id="U6g-IG-M5O"/>
+                            <constraint firstItem="nHJ-pR-St6" firstAttribute="top" secondItem="MA2-4b-2q6" secondAttribute="top" id="wym-8D-dbU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3ub-jL-Nx0"/>
+                    <connections>
+                        <outlet property="tableView" destination="nHJ-pR-St6" id="VLv-7y-yuw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="38d-gv-qQN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1930" y="-394"/>
         </scene>
         <!--Forth-->
         <scene sceneID="9Pf-y3-qS4">
@@ -151,6 +213,7 @@
         <segue reference="Ahg-29-edi"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="typescript" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
