--- a/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
+++ b/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell2" id="acb-wO-dox" customClass="MyCell2" customModule="SampleApp4" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyCell2" id="acb-wO-dox" customClass="MyCell2" customModule="SampleApp4" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="68.333333969116211" width="375" height="375"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="acb-wO-dox" id="l1b-SU-E8c">
