--- a/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
+++ b/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="doa-HZ-x3I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3045.5999999999999" y="855.66502463054189"/>
+            <point key="canvasLocation" x="-3159" y="780"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Qqe-AO-aNY">
