--- a/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
+++ b/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DYH-6I-Zon">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="huo-Vo-p3x">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -169,6 +170,77 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="doa-HZ-x3I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3159" y="780"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="Dqk-fm-IY9">
+            <objects>
+                <viewController id="huo-Vo-p3x" customClass="CollectionViewController" customModule="SampleApp4" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jcc-L1-NOy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2e7-mn-x5I">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rpa-Y6-I0i">
+                                    <size key="itemSize" width="169" height="172"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyCell" id="nTz-Nd-EiQ" customClass="MyColCell" customModule="SampleApp4" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pod-iw-an3">
+                                            <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6IY-ay-fKb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sq-Gv-4t3">
+                                                    <rect key="frame" x="0.0" y="140" width="169" height="32"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.75" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="32" id="CZQ-aD-RzC"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="8sq-Gv-4t3" secondAttribute="trailing" id="NsY-YE-lcz"/>
+                                                <constraint firstItem="6IY-ay-fKb" firstAttribute="leading" secondItem="pod-iw-an3" secondAttribute="leading" id="OiN-qi-dKH"/>
+                                                <constraint firstAttribute="bottom" secondItem="6IY-ay-fKb" secondAttribute="bottom" id="c1N-Ma-m23"/>
+                                                <constraint firstItem="8sq-Gv-4t3" firstAttribute="leading" secondItem="pod-iw-an3" secondAttribute="leading" id="foV-b8-x8R"/>
+                                                <constraint firstItem="6IY-ay-fKb" firstAttribute="top" secondItem="pod-iw-an3" secondAttribute="top" id="hVa-TO-099"/>
+                                                <constraint firstAttribute="trailing" secondItem="6IY-ay-fKb" secondAttribute="trailing" id="l4X-jn-Tfs"/>
+                                                <constraint firstAttribute="bottom" secondItem="8sq-Gv-4t3" secondAttribute="bottom" id="tIr-h3-6KA"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="169" height="172"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="R9k-4a-xgN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2e7-mn-x5I" firstAttribute="leading" secondItem="R9k-4a-xgN" secondAttribute="leading" id="0Ct-Ke-h3P"/>
+                            <constraint firstItem="R9k-4a-xgN" firstAttribute="bottom" secondItem="2e7-mn-x5I" secondAttribute="bottom" id="H40-BK-0Ug"/>
+                            <constraint firstItem="2e7-mn-x5I" firstAttribute="top" secondItem="R9k-4a-xgN" secondAttribute="top" id="hm1-RN-oNW"/>
+                            <constraint firstItem="R9k-4a-xgN" firstAttribute="trailing" secondItem="2e7-mn-x5I" secondAttribute="trailing" id="pUf-Ce-gG1"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="2e7-mn-x5I" id="M8p-CQ-oIz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TJn-ie-Dgr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3159.1999999999998" y="1452.7093596059115"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Qqe-AO-aNY">
