--- a/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
+++ b/SampleApp4/SampleApp4/Base.lproj/Main.storyboard
@@ -179,10 +179,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2e7-mn-x5I">
-                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2e7-mn-x5I">
+                                <rect key="frame" x="20" y="44" width="335" height="734"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rpa-Y6-I0i">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rpa-Y6-I0i">
                                     <size key="itemSize" width="169" height="172"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -190,13 +190,13 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyCell" id="nTz-Nd-EiQ" customClass="MyColCell" customModule="SampleApp4" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
+                                        <rect key="frame" x="83" y="0.0" width="169" height="172"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pod-iw-an3">
                                             <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6IY-ay-fKb">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typescript" translatesAutoresizingMaskIntoConstraints="NO" id="6IY-ay-fKb">
                                                     <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sq-Gv-4t3">
@@ -232,10 +232,10 @@
                         <viewLayoutGuide key="safeArea" id="R9k-4a-xgN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2e7-mn-x5I" firstAttribute="leading" secondItem="R9k-4a-xgN" secondAttribute="leading" id="0Ct-Ke-h3P"/>
+                            <constraint firstItem="2e7-mn-x5I" firstAttribute="leading" secondItem="R9k-4a-xgN" secondAttribute="leading" constant="20" id="0Ct-Ke-h3P"/>
                             <constraint firstItem="R9k-4a-xgN" firstAttribute="bottom" secondItem="2e7-mn-x5I" secondAttribute="bottom" id="H40-BK-0Ug"/>
                             <constraint firstItem="2e7-mn-x5I" firstAttribute="top" secondItem="R9k-4a-xgN" secondAttribute="top" id="hm1-RN-oNW"/>
-                            <constraint firstItem="R9k-4a-xgN" firstAttribute="trailing" secondItem="2e7-mn-x5I" secondAttribute="trailing" id="pUf-Ce-gG1"/>
+                            <constraint firstItem="R9k-4a-xgN" firstAttribute="trailing" secondItem="2e7-mn-x5I" secondAttribute="trailing" constant="20" id="pUf-Ce-gG1"/>
                         </constraints>
                     </view>
                     <connections>
